--- a/src/styles/ForgotPasswordPage.css
+++ b/src/styles/ForgotPasswordPage.css
@@ -1,86 +1,88 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300&display=swap");
 
 .app {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh;
-    background-color: #f8f9fd;
-    font-family: "Inter", "DM Sans", Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fd;
+  font-family: "Inter", "DM Sans", Arial, sans-serif;
 }
 
 h1 {
-    font-family: "Poppins"
+  font-family: "Poppins";
 }
 
 .login-form {
-    position: relative;
-    background: #FFFFFF;
-    max-width: 360px;
-    padding: 45px;
-    text-align: center;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    border-radius:15px;
+  position: relative;
+  background: #ffffff;
+  max-width: 360px;
+  padding: 45px;
+  text-align: center;
+  box-shadow:
+    0 0 20px 0 rgba(0, 0, 0, 0.2),
+    0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 15px;
 }
 
 input {
-    outline: 0;
-    background: #f2f2f2;
-    width: 100%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border-radius:15px;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 15px;
 }
 
 input:hover {
-    background: #eeeeee;
+  background: #eeeeee;
 }
 
 button {
-    text-transform: uppercase;
-    outline: 0;
-    background: #3324be;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-    border-radius:15px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
+  text-transform: uppercase;
+  outline: 0;
+  background: #3324be;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 14px;
+  border-radius: 15px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
 
 button:hover {
-    background: #40116d;
+  background: #40116d;
 }
 
 .message {
-    margin: 15px 0 0;
-    color: #b3b3b3;
-    font-size: 12px;
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
 }
 
 .message a {
-    color: #3324be;
-    text-decoration: none;
+  color: #3324be;
+  text-decoration: none;
 }
 
-.submit_type{
-    text-transform: uppercase;
-    outline: 0;
-    background: #3324be;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-    border-radius:15px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
+.submit_type {
+  text-transform: uppercase;
+  outline: 0;
+  background: #3324be;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 14px;
+  border-radius: 15px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
