--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,9 +1,10 @@
 .nav-links {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   padding: 10px;
   background-color: rgb(41, 41, 168);
   justify-content: flex-end;
+  align-items: Center;
 }
 
 .navbar .nav-links a {
@@ -19,7 +20,23 @@
   color: rgb(238, 48, 48); /* Change text color on hover */
 }
 
-.container {
+.logout-button {
+  color: white;
+  background-color: rgb(41, 41, 168);
+  border: none;
+  padding: 3px 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  width: auto; /* for suto width size to make the Logout button stay at the end */
+  flex-shrink: 0;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #ff5555;
+}
+.Navbar .container {
   display: flex;
   width: 100%;
 }
