made it more legit

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,15 @@
   width: "18rem";
 }
 
+.cardtitle {
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.carddesc {
+  font-size: 40px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
